--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "banu-portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.15.4",
+    "npm": "7.5.4"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
