--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
     "react-tsparticles": "^1.22.1",
     "web-vitals": "^1.1.1"
   },
